# CORIC_AGRAR

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  justfile  lighthouserc.json  pyproject.toml  python.exe.stackdump
.github/workflows/: ci.yml  deploy.yml  e2e.yml  lighthouse.yml
_bmad/: config.toml
_bmad-output/: epic-7-manual-test-checklist.md  project-context.md  test-design-system.md
_bmad-output/implementation-artifacts/: .4-1-lead-model-smtp-setup.step-01.marker  1-1-interface-contract.md  1-1-project-bootstrap-sa-uv-i-django.md  1-2-interface-contract.md  1-2-multi-environment-settings-split-sa-django-environ.md  1-3-docker-compose-za-local-environment.md  1-3-interface-contract.md  1-4-i18n-setup-sa-locale-url-routing-i-switcher.md  1-4-interface-contract.md  1-5-interface-contract.md  1-5-self-hosted-roboto-design-md-tokens-kao-css-custom-properties.md  1-6-base-templates-sa-bootstrap-5-htmx-setup.md  1-6-interface-contract.md  (+123 more)
apps/: __init__.py
compose/: local.yml  production.yml
config/: settings.py  urls.py
docs/: Projektni zadatak - Ćorić agrar.md
templates/: base.html
tests/: conftest.py  test_backup_restic.py  test_base_template.py  test_bootstrap.py  test_ci_workflow_config.py  test_deployment_ssl.py  test_docker_compose.py  test_glitchtip_monitoring.py  test_i18n_setup.py  test_lightbox_integration.py  test_lighthouse_gate_9_10.py  test_logging_config.py  test_navigation_chrome.py  test_production_stack.py  test_settings_split.py  test_static_tokens.py  test_visual_components.py
(+552 files in other folders)
